// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`characterization（リファクタ前後の動作保証） > initState('HI') の出力全体がリファクタ前後で一致する 1`] = `
{
  "generation": 0,
  "history": [
    {
      "avg": 0.5333333333333333,
      "best": 0.9,
      "diversity": 0.5048275862068966,
      "generation": 0,
    },
  ],
  "isRunning": false,
  "population": [
    "0010000011",
    "1011100111",
    "1010110100",
    "0111101111",
    "1000001110",
    "0000011011",
    "0001011010",
    "0100110001",
    "1111000111",
    "0100011100",
    "0011001000",
    "1000111100",
    "0101111001",
    "1111101100",
    "0110101100",
    "1101111111",
    "1101101010",
    "0110010000",
    "0101110101",
    "1111100000",
    "0111010011",
    "1101111011",
    "1000100111",
    "0011001110",
    "0111101111",
    "1110100100",
    "0011000110",
    "0001001010",
    "0110100011",
    "0010101010",
  ],
  "selectionMethod": "elite",
  "solved": false,
  "speed": 300,
  "target": "HI",
}
`;

exports[`characterization（リファクタ前後の動作保証） > stepState を3世代進めた出力全体がリファクタ前後で一致する 1`] = `
{
  "generation": 3,
  "history": [
    {
      "avg": 0.5333333333333333,
      "best": 0.9,
      "diversity": 0.5048275862068966,
      "generation": 0,
    },
    {
      "avg": 0.5333333333333333,
      "best": 0.9,
      "diversity": 0.5048275862068966,
      "generation": 1,
    },
    {
      "avg": 0.5333333333333333,
      "best": 0.9,
      "diversity": 0.5048275862068966,
      "generation": 2,
    },
    {
      "avg": 0.5333333333333333,
      "best": 0.9,
      "diversity": 0.5048275862068966,
      "generation": 3,
    },
  ],
  "isRunning": false,
  "population": [
    "0010000011",
    "1011100111",
    "1010110100",
    "0111101111",
    "1000001110",
    "0000011011",
    "0001011010",
    "0100110001",
    "1111000111",
    "0100011100",
    "0011001000",
    "1000111100",
    "0101111001",
    "1111101100",
    "0110101100",
    "1101111111",
    "1101101010",
    "0110010000",
    "0101110101",
    "1111100000",
    "0111010011",
    "1101111011",
    "1000100111",
    "0011001110",
    "0111101111",
    "1110100100",
    "0011000110",
    "0001001010",
    "0110100011",
    "0010101010",
  ],
  "selectionMethod": "elite",
  "solved": false,
  "speed": 300,
  "target": "HI",
}
`;
